<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corp"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/imcBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:onClick="openIMC"/>
        <Button
            android:id="@+id/conversorBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conversor"
            android:onClick="openConversor"/>
        <Button
            android:id="@+id/sorteioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorteio"
            android:onClick="openSorteio"/>



    </LinearLayout>


</LinearLayout>