<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversorActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/temperatura"
        android:textSize="22dp"
        />

         <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="70dp"
        android:text="@string/celsius"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/celsiuView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"

        android:layout_y="95dp"
        android:textSize="18dp" />

    <Button
        android:id="@+id/converterBtn"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_x="200dp"
        android:layout_y="159dp"
        android:onClick="converterTemp"
        android:text="@string/converter" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_x="0dp"
        android:layout_y="151dp"
        android:gravity="center"
        android:text="Resultado"
        android:textSize="45dp" />

</AbsoluteLayout>